2009-03-27  Erik L. Bunce  <elbunce@xendom.com>

Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=24274

        Fixed the Qt 4.4 Mac build with netscape plugins enabled.

Canonical link: https://commits.webkit.org/34089@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42033 268f45cc-cd09-0410-ab3c-d52691b4dbfc